--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 Flask==3.0.3
-Flask_Cors==4.0.1
-flask_sqlalchemy==3.1.1
-Requests==2.32.3
+Flask-Cors==4.0.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+requests==2.32.3
+SQLAlchemy==2.0.30
+typing_extensions==4.12.2
+urllib3==2.2.1
+Werkzeug==3.0.3
